bug head version mobile

--- a/style.css
+++ b/style.css
@@ -223,13 +223,13 @@ body{
 
     header h1 {
         text-align: center;
-        margin-left: 25%;
+        margin-left: 20%;
         
        
      } 
     header .soustitre {
         text-align: center;
-        margin-left: 25%;
+        margin-left: 20%;
         
         
     }
@@ -255,6 +255,7 @@ body{
     main {
     
         width: 100%;
+        margin-top: 3%;
        
             
     }
